First stage of refactoring avoiding memory issues for large (~500Mb, e.g. some west-european country) files, TopologyException handling to avoid generation fails
Change-Id: Id45f02b16336594331f09a1eb241ff4d8a88e979

--- a/osm2xp/.classpath
+++ b/osm2xp/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/hppc-0.8.1.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1536569583526/source/hppc-0.8.1-sources-1536569591935.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-19.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-opengis-19.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-api-19.2.jar"/>
@@ -34,8 +35,8 @@
 	<classpathentry kind="lib" path="lib/SGImplify.jar"/>
 	<classpathentry kind="lib" path="lib/Tuple.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/osmosis-osm-binary-0.46.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1533711954649/source/osmosis-osm-binary-0.46-sources-1533797390112.jar"/>
-	<classpathentry kind="lib" path="lib/protobuf-java-3.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/jts-1.13.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1534485643678/source/jts-1.13-sources-1534497423567.jar"/>
+	<classpathentry kind="lib" path="lib/osmosis-osm-binary-0.46.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1536823159521/source/osmosis-osm-binary-0.46-sources-1536839592776.jar"/>
+	<classpathentry kind="lib" path="lib/protobuf-java-3.4.0.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1536128619517/source/protobuf-java-3.4.0-sources-1536143202405.jar"/>
+	<classpathentry kind="lib" path="lib/jts-1.13.jar" sourcepath="C:/Users/Sviridov/AppData/Local/Temp/.org.sf.feeling.decompiler1536823159521/source/jts-1.13-sources-1536837126540.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
