--- a/osm2xp/build.properties
+++ b/osm2xp/build.properties
@@ -65,6 +65,7 @@ bin.includes = plugin.xml,\
                lib/gt-api-19.2.jar,\
                lib/gt-main-19.2.jar,\
                lib/gt-opengis-19.2.jar,\
-               lib/gt-referencing-19.2.jar
+               lib/gt-referencing-19.2.jar,\
+               lib/hppc-0.8.1.jar
 source.. = src/
 bin.excludes = images/translatorsImages/
