Geoname obtaining and fixing apt generation issues
Change-Id: I3a12b35f574125a56d33a57760d418b958dcfa8a

--- a/osm2xp/.classpath
+++ b/osm2xp/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/geonames-1.1.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-19.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-opengis-19.2.jar"/>
