--- a/osm2xp/build.properties
+++ b/osm2xp/build.properties
@@ -66,6 +66,8 @@ bin.includes = plugin.xml,\
                lib/gt-main-19.2.jar,\
                lib/gt-opengis-19.2.jar,\
                lib/gt-referencing-19.2.jar,\
-               lib/json-simple-1.1.1.jar
+               lib/json-simple-1.1.1.jar,\
+               lib/geonames-1.1.14.jar,\
+               lib/jdom-1.0.jar
 source.. = src/
 bin.excludes = images/translatorsImages/
