Further classification experiments, geoindex added
Change-Id: Iabba56e29ebcb0484642161f0f27f808a8c441ed

--- a/com.osm2xp.classification/pom.xml
+++ b/com.osm2xp.classification/pom.xml
@@ -22,5 +22,10 @@
   		<artifactId>weka-stable</artifactId>
   		<version>3.8.3</version>
   	</dependency>
+  	<dependency>
+         <groupId>com.eatthepath</groupId>
+         <artifactId>jvptree</artifactId>
+         <version>0.3.0</version>
+     </dependency>
   </dependencies>
 </project>
