--- a/osm2xp/build.properties
+++ b/osm2xp/build.properties
@@ -11,40 +11,8 @@ bin.includes = plugin.xml,\
                contexts.xml,\
                tocTutorials.xml,\
                images/,\
-               lib/commons-collections-3.2.1.jar,\
-               lib/commons-compress-1.0.jar,\
-               lib/commons-configuration-1.6.jar,\
-               lib/commons-io-2.4.jar,\
-               lib/commons-logging-1.1.1.jar,\
-               lib/guava-r08.jar,\
-               lib/h2-1.3.160.jar,\
-               lib/iText-2.1.5.jar,\
-               lib/javaproj-1.0.6.jar,\
-               lib/jcommon-1.0.16.jar,\
-               lib/jdbm-2.4.jar,\
-               lib/JDBM-3.0-alpha3.jar,\
-               lib/jfreechart-1.0.13.jar,\
-               lib/omcorba.jar,\
-               lib/omj3d.jar,\
-               lib/omsvg.jar,\             
-               lib/OSM2World.jar,\
-               lib/persistence-api-1.0.jar,\
-               lib/SGImplify.jar,\
-               lib/Tuple.jar,\
-               lib/osmosis-core-0.46.jar,\
-               lib/osmosis-pbf-0.46.jar,\
-               lib/osmosis-pbf2-0.46.jar,\
-               lib/osmosis-xml-0.46.jar,\
-               lib/osmosis-osm-binary-0.46.jar,\
-               lib/protobuf-java-3.4.0.jar,\
+               ,\
                icons/,\
-               lib/jts-1.13.jar,\
-               lib/gt-api-19.2.jar,\
-               lib/gt-main-19.2.jar,\
-               lib/gt-opengis-19.2.jar,\
-               lib/gt-referencing-19.2.jar,\
-               lib/json-simple-1.1.1.jar,\
-               lib/geonames-1.1.14.jar,\
-               lib/jdom-1.0.jar
+               lib/
 source.. = src/
 bin.excludes = images/translatorsImages/
