--- a/com.osm2xp.classification/pom.xml
+++ b/com.osm2xp.classification/pom.xml
@@ -27,5 +27,10 @@
          <artifactId>jvptree</artifactId>
          <version>0.3.0</version>
      </dependency>
+  	<dependency>
+  		<groupId>com.osm2xp</groupId>
+  		<artifactId>core</artifactId>
+  		<version>[0.0.0,)</version>
+  	</dependency>
   </dependencies>
 </project>
