--- a/com.osm2xp.core/pom.xml
+++ b/com.osm2xp.core/pom.xml
@@ -40,12 +40,22 @@
 	<dependency>
 	    <groupId>com.google.protobuf</groupId>
 	    <artifactId>protobuf-java</artifactId>
-	    <version>3.6.1</version>
+	    <version>2.4.1</version>
 	</dependency>
 	<dependency>
 	    <groupId>math.geom2d</groupId>
 	    <artifactId>javaGeom</artifactId>
 	    <version>0.11.1</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.eclipse.collections</groupId>
+	  <artifactId>eclipse-collections-api</artifactId>
+	  <version>9.2.0</version>
+	</dependency>	
+	<dependency>
+	  <groupId>org.eclipse.collections</groupId>
+	  <artifactId>eclipse-collections</artifactId>
+	  <version>9.2.0</version>
 	</dependency>
 	<dependency>
 	    <groupId>commons-lang</groupId>
