Furter refactorign to make Maven build alive. RCP app refactoring basically done, need bugfixing
Change-Id: If99a0e025542bc60d0736288b17643c489dc6be4

--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -2,4 +2,12 @@ source.. = src/main/java/,\
            src/test/java/,\
            src/main/resources/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/commons-io.jar,\
+               lib/geonames-ws-client.jar,\
+               lib/h2.jar,\
+               lib/json-simple.jar,\
+               lib/jts-core.jar,\
+               lib/mapdb.jar,\
+               lib/jaxb-core.jar,\
+               lib/jaxb-impl.jar
