--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>r05</version>
+		</dependency>
 		 <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
