--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -12,6 +12,17 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551851164405/source/commons-lang-2.6-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-runtime.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/openmap.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/osmosis-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/osmosis-osm-binary.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/osmosis-xml.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/protobuf-java.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-pbf.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
