--- a/com.osm2xp.core/build.properties
+++ b/com.osm2xp.core/build.properties
@@ -3,4 +3,15 @@ source.. = src/main/java/,\
 bin.includes = META-INF/,\
                .,\
                lib/javaGeom.jar,\
-               lib/osmosis-pbf.jar
+               lib/osmosis-pbf.jar,\
+               lib/activation.jar,\
+               lib/commons-lang.jar,\
+               lib/eclipse-collections-api.jar,\
+               lib/eclipse-collections.jar,\
+               lib/jaxb-api.jar,\
+               lib/jaxb-runtime.jar,\
+               lib/openmap.jar,\
+               lib/osmosis-core.jar,\
+               lib/osmosis-osm-binary.jar,\
+               lib/osmosis-xml.jar,\
+               lib/protobuf-java.jar
