--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -12,6 +12,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/h2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mapdb.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
