Eclipse app started to work
Change-Id: Ia068da6b91777a8a0e1c31f6c8567b9e2dc9ade4

--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -13,11 +13,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551851164405/source/commons-lang-2.6-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551930702483/source/commons-lang-2.6-sources-1551937034852.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jaxb-runtime.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-runtime.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551930702483/source/jaxb-runtime-2.3.0-b170127.1453-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/openmap.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-core.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-osm-binary.jar"/>
