--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                lib/jts-core.jar,\
                lib/mapdb.jar,\
                lib/jaxb-core.jar,\
-               lib/jaxb-impl.jar
+               lib/jaxb-impl.jar,\
+               lib/guava.jar
