--- a/com.osm2xp.generation/pom.xml
+++ b/com.osm2xp.generation/pom.xml
@@ -78,6 +78,12 @@
 									<artifactId>jaxb-core</artifactId>
 									<version>2.2.11</version>
 								</dependency>
+								<dependency>
+								    <groupId>com.google.guava</groupId>
+								    <artifactId>guava</artifactId>
+								    <version>27.0.1-jre</version>
+								</dependency>
+																
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
