--- a/osm2xp/.classpath
+++ b/osm2xp/.classpath
@@ -6,12 +6,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-configuration-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-r08.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.3.160.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdbm-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/JDBM-3.0-alpha3.jar"/>
