--- a/osm2xp/pom.xml
+++ b/osm2xp/pom.xml
@@ -13,7 +13,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>com.osm2xp.application</artifactId>
-	<name>DLR Maven Tycho Demo - Product</name>
+	<name>OSM2XP - Product</name>
 	<parent>
 		<groupId>com.osm2xp</groupId>
 		<artifactId>com.osm2xp.parent</artifactId>
