Build is taking shape
Change-Id: Ifd4e39490dd75e1d2e987014b88049af46df4f52

--- a/com.osm2xp.application/plugin.xml
+++ b/com.osm2xp.application/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
 
    <extension
-         id="application"
+         id="app"
          point="org.eclipse.core.runtime.applications">
       <application>
          <run
@@ -708,10 +708,10 @@
       </menuContribution>
    </extension>
    <extension
-         id="osm2xp"
+         id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="com.osm2xp.application"
+            application="com.osm2xp.application.app"
             name="OSM2XP">
          <property
                name="appName"
