--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -2,18 +2,17 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/main/java/"/>
-	<classpathentry kind="src" path="src/test/java/"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-pbf.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551930702483/source/commons-lang-2.6-sources-1551937034852.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections-api.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/eclipse-collections.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552975380805/source/commons-lang-2.6-sources-1552994425697.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-runtime.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1551930702483/source/jaxb-runtime-2.3.0-b170127.1453-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/openmap.jar"/>
