--- a/com.osm2xp.core/pom.xml
+++ b/com.osm2xp.core/pom.xml
@@ -12,87 +12,77 @@
 
 	<parent>
 		<groupId>com.osm2xp</groupId>
-		<artifactId>com.osm2xp.parent</artifactId>
+		<artifactId>com.osm2xp.core.parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
-		<relativePath>../releng</relativePath>
+		<relativePath>../releng-core</relativePath>
 	</parent>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.openstreetmap.osmosis</groupId>
-			<artifactId>osmosis-pbf</artifactId>
-			<version>0.46</version>
-		</dependency>
-		<dependency>
-			<groupId>math.geom2d</groupId>
-			<artifactId>javaGeom</artifactId>
-			<version>0.11.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openstreetmap.osmosis</groupId>
-			<artifactId>osmosis-osm-binary</artifactId>
-			<version>0.43.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openstreetmap.osmosis</groupId>
-			<artifactId>osmosis-core</artifactId>
-			<version>0.47</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openstreetmap.osmosis</groupId>
-			<artifactId>osmosis-xml</artifactId>
-			<version>0.47</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>2.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections-api</artifactId>
-			<version>9.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections</artifactId>
-			<version>9.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>com.bbn.openmap</groupId>
-			<artifactId>openmap</artifactId>
-			<version>5.0.3</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
-		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>activation</artifactId>
-			<version>1.1</version>
-		</dependency>
+<!-- 	<dependencies> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.openstreetmap.osmosis</groupId> -->
+<!-- 			<artifactId>osmosis-pbf</artifactId> -->
+<!-- 			<version>0.46</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>math.geom2d</groupId> -->
+<!-- 			<artifactId>javaGeom</artifactId> -->
+<!-- 			<version>0.11.1</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.openstreetmap.osmosis</groupId> -->
+<!-- 			<artifactId>osmosis-osm-binary</artifactId> -->
+<!-- 			<version>0.43.1</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.openstreetmap.osmosis</groupId> -->
+<!-- 			<artifactId>osmosis-core</artifactId> -->
+<!-- 			<version>0.47</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.openstreetmap.osmosis</groupId> -->
+<!-- 			<artifactId>osmosis-xml</artifactId> -->
+<!-- 			<version>0.47</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.google.protobuf</groupId> -->
+<!-- 			<artifactId>protobuf-java</artifactId> -->
+<!-- 			<version>2.4.1</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>net.sf.trove4j</groupId> -->
+<!-- 		    <artifactId>trove4j</artifactId> -->
+<!-- 		    <version>3.0.3</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-lang</groupId> -->
+<!-- 			<artifactId>commons-lang</artifactId> -->
+<!-- 			<version>2.6</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.bbn.openmap</groupId> -->
+<!-- 			<artifactId>openmap</artifactId> -->
+<!-- 			<version>5.0.3</version> -->
+<!-- 		</dependency> -->
+ 		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api --> 
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.xml.bind</groupId> -->
+<!-- 			<artifactId>jaxb-api</artifactId> -->
+<!-- 			<version>2.3.1</version> -->
+<!-- 		</dependency> -->
+<!-- 		 https://mvnrepository.com/artifact/javax.activation/activation  -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.activation</groupId> -->
+<!-- 			<artifactId>activation</artifactId> -->
+<!-- 			<version>1.1</version> -->
+<!-- 		</dependency> -->
 
-		<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
-		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-			<version>2.3.0-b170127.1453</version>
-		</dependency>
-	</dependencies>
+<!-- 		 https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime  -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.glassfish.jaxb</groupId> -->
+<!-- 			<artifactId>jaxb-runtime</artifactId> -->
+<!-- 			<version>2.3.0-b170127.1453</version> -->
+<!-- 		</dependency> -->
+<!-- 	</dependencies> -->
 
 	<build>
 		<plugins>
@@ -138,17 +128,7 @@
 									<groupId>com.google.protobuf</groupId>
 									<artifactId>protobuf-java</artifactId>
 									<version>2.4.1</version>
-								</dependency>
-								<dependency>
-									<groupId>org.eclipse.collections</groupId>
-									<artifactId>eclipse-collections-api</artifactId>
-									<version>9.2.0</version>
-								</dependency>
-								<dependency>
-									<groupId>org.eclipse.collections</groupId>
-									<artifactId>eclipse-collections</artifactId>
-									<version>9.2.0</version>
-								</dependency>
+								</dependency>								
 								<dependency>
 									<groupId>commons-lang</groupId>
 									<artifactId>commons-lang</artifactId>
@@ -198,25 +178,7 @@
 						</manifest>
 					</archive>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			
+			</plugin>						
 		</plugins>
 	</build>
 	
