--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -3,12 +3,7 @@ source.. = src/main/java/,\
            src/main/resources/
 bin.includes = META-INF/,\
                .,\
-               lib/commons-io.jar,\
-               lib/geonames-ws-client.jar,\
-               lib/h2.jar,\
-               lib/json-simple.jar,\
-               lib/jts-core.jar,\
-               lib/mapdb.jar,\
-               lib/jaxb-core.jar,\
-               lib/jaxb-impl.jar,\
-               lib/guava.jar
+               lib/,\
+               lib/chronicle-map.jar,\
+               lib/chronicle-core.jar,\
+               lib/chronicle-wire.jar
