--- a/com.osm2xp.generation/pom.xml
+++ b/com.osm2xp.generation/pom.xml
@@ -4,69 +4,18 @@
 
 	<artifactId>com.osm2xp.generation</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>eclipse-plugin</packaging>
+	
+	<parent>
+		<groupId>com.osm2xp</groupId>
+		<artifactId>com.osm2xp.core.parent</artifactId>
+		<version>4.0.0-SNAPSHOT</version>
+		<relativePath>../releng-core</relativePath>
+	</parent>
 
 	<name>generation</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>com.osm2xp</groupId>
-			<artifactId>com.osm2xp.core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.locationtech.jts</groupId>
-			<artifactId>jts-core</artifactId>
-			<version>1.16.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.161</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mapdb</groupId>
-			<artifactId>mapdb</artifactId>
-			<version>3.0.7</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.geonames</groupId>
-			<artifactId>geonames-ws-client</artifactId>
-			<version>1.1.9</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.11</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.2.11</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.google.guava</groupId>
-		    <artifactId>guava</artifactId>
-		    <version>27.0.1-jre</version>
-		</dependency>
-	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -127,7 +76,12 @@
 								    <artifactId>guava</artifactId>
 								    <version>27.0.1-jre</version>
 								</dependency>
-																
+								<!-- https://mvnrepository.com/artifact/net.sf.trove4j/trove4j -->
+								<dependency>
+								    <groupId>net.sf.trove4j</groupId>
+								    <artifactId>trove4j</artifactId>
+								    <version>3.0.3</version>
+								</dependency>								
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
@@ -139,5 +93,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<groupId>com.osm2xp</groupId>
 </project>
