--- a/releng-core/.project
+++ b/releng-core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>releng-app</name>
+	<name>releng-core</name>
 	<comment></comment>
 	<projects>
 	</projects>
