--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -47,9 +47,6 @@
 
 
 	<modules>
-		<module>../com.osm2xp.core</module>
-		<module>../com.osm2xp.generation</module>
-		<module>../com.osm2xp.console</module>
 		<module>../com.osm2xp.application</module>
 		<module>../com.osm2xp.product</module>
 	</modules>
@@ -102,7 +99,7 @@
 	</profiles>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+<!-- 		<sourceDirectory>src</sourceDirectory> -->
 		<plugins>
 
 			<plugin>
