--- a/com.osm2xp.application/pom.xml
+++ b/com.osm2xp.application/pom.xml
@@ -18,20 +18,10 @@
 		<groupId>com.osm2xp</groupId>
 		<artifactId>com.osm2xp.parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
-		<relativePath>../releng/pom.xml</relativePath>
+		<relativePath>../releng-app/pom.xml</relativePath>
 	</parent>
 
 	<packaging>eclipse-plugin</packaging>
-
-	<properties>
-		<build.folder.application>Osm2XP</build.folder.application>
-		<build.folder.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}</build.folder.fullpath>
-		<build.file.win32.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.zip</build.file.win32.fullpath>
-		<build.file.linux.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.tar.gz</build.file.linux.fullpath>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-    	<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
 
 	<build>
 		<plugins>
@@ -50,51 +40,51 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<configuration>
-							<target>
-								<fail
-									message="Cannot Release!!! Release folder already exists !!! Potential overwrite to ${build.folder.fullpath} !!!">
-									<condition>
-										<and>
-											<equals arg1="${build.deploy.release}" arg2="true" />
-											<available file="${build.folder.fullpath}"
-												type="dir" />
-										</and>
-									</condition>
-								</fail>
+<!-- 			<plugin> -->
+<!-- 				<artifactId>maven-antrun-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<phase>install</phase> -->
+<!-- 						<configuration> -->
+<!-- 							<target> -->
+<!-- 								<fail -->
+<!-- 									message="Cannot Release!!! Release folder already exists !!! Potential overwrite to ${build.folder.fullpath} !!!"> -->
+<!-- 									<condition> -->
+<!-- 										<and> -->
+<!-- 											<equals arg1="${build.deploy.release}" arg2="true" /> -->
+<!-- 											<available file="${build.folder.fullpath}" -->
+<!-- 												type="dir" /> -->
+<!-- 										</and> -->
+<!-- 									</condition> -->
+<!-- 								</fail> -->
 
-								<!-- ANT Script Start -->
-								<delete file="${build.file.win32.fullpath}" />
-								<delete file="${build.file.linux.fullpath}" />
+<!-- 								ANT Script Start -->
+<!-- 								<delete file="${build.file.win32.fullpath}" /> -->
+<!-- 								<delete file="${build.file.linux.fullpath}" /> -->
 
-								<zip destfile="${build.file.win32.fullpath}"
-									basedir="./target/products/${project.artifactId}/win32/win32/x86_64" />
-								<tar longfile="gnu" destfile="${build.file.linux.fullpath}"
-									compression="gzip">
-									<tarfileset dir="./target/products/${project.artifactId}/linux/gtk/x86_64" filemode="755"
-										username="root" group="root">
-										<include name="DLRMavenTychoDemo" />
-									</tarfileset>
-									<tarfileset dir="./target/products/${project.artifactId}/linux/gtk/x86_64" username="root"
-										group="root">
-										<include name="**" />
-										<exclude name="DLRMavenTychoDemo" />
-									</tarfileset>
-								</tar>
-								<!-- ANT Script Stop -->
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 								<zip destfile="${build.file.win32.fullpath}" -->
+<!-- 									basedir="./target/products/${project.artifactId}/win32/win32/x86_64" /> -->
+<!-- 								<tar longfile="gnu" destfile="${build.file.linux.fullpath}" -->
+<!-- 									compression="gzip"> -->
+<!-- 									<tarfileset dir="./target/products/${project.artifactId}/linux/gtk/x86_64" filemode="755" -->
+<!-- 										username="root" group="root"> -->
+<!-- 										<include name="OSM2XP" /> -->
+<!-- 									</tarfileset> -->
+<!-- 									<tarfileset dir="./target/products/${project.artifactId}/linux/gtk/x86_64" username="root" -->
+<!-- 										group="root"> -->
+<!-- 										<include name="**" /> -->
+<!-- 										<exclude name="OSM2XP" /> -->
+<!-- 									</tarfileset> -->
+<!-- 								</tar> -->
+<!-- 								ANT Script Stop -->
+<!-- 							</target> -->
+<!-- 						</configuration> -->
+<!-- 						<goals> -->
+<!-- 							<goal>run</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-dependency-plugin</artifactId>
@@ -107,7 +97,7 @@
 		              <goal>copy-dependencies</goal>
 		            </goals>
 		            <configuration>
-		              <outputDirectory>${basedir}</outputDirectory>
+		              <outputDirectory>${build.folder.target.bin}/jar</outputDirectory>
 		              <overWriteReleases>false</overWriteReleases>
 		              <overWriteSnapshots>false</overWriteSnapshots>
 		              <overWriteIfNewer>true</overWriteIfNewer>
@@ -122,7 +112,7 @@
 		        <configuration>
 		          <filesets>
 		            <fileset>
-		              <directory>${basedir}</directory>
+		              <directory>${build.folder.target.bin}/jar</directory>
 		              <includes>
 		                <include>*.jar</include>
 		              </includes>
