--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -33,7 +33,8 @@
 		</license>
 	</licenses>
 	<build>
-		<finalName>osm2xpc</finalName>
+		<finalName>osm2xpc</finalName>		
+		<outputDirectory>${basedir}/target/jar</outputDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -87,6 +88,28 @@
 	                </filters>
 	            </configuration>
 	        </plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/jar</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../osm2xp_additions</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 <!-- 			<plugin> -->
 <!-- 				<artifactId>maven-assembly-plugin</artifactId> -->
 <!-- 				<configuration> -->
