--- a/releng-app/pom.xml
+++ b/releng-app/pom.xml
@@ -30,6 +30,8 @@
 		<tycho-version>1.2.0</tycho-version>
 		<tycho-extras-version>1.2.0</tycho-extras-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
 		<build.version>0.3.0</build.version>
 		<build.qualifier>'t'yyyyMMddHHmm</build.qualifier>
 		<build.folder.target>../builds</build.folder.target>
@@ -39,6 +41,11 @@
 		<build.folder.target.unsecured>../deploy/unsecured</build.folder.target.unsecured>
 		<build.folder.target.bin>../builds/${build.folder.bin}</build.folder.target.bin>
 		<build.folder.target.p2>../builds/${build.folder.p2}</build.folder.target.p2>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<build.folder.application>OSM2XP</build.folder.application>
+		<build.folder.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}</build.folder.fullpath>
+		<build.file.win32.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.zip</build.file.win32.fullpath>
+		<build.file.linux.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.tar.gz</build.file.linux.fullpath>
 		<build.folder.type>test</build.folder.type>
 		<build.file.zip>osm2xp.zip</build.file.zip>
 		<build.deploy.release>false</build.deploy.release>
