--- a/releng-console/pom.xml
+++ b/releng-console/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>com.osm2xp.console.parent</artifactId>
 	<version>4.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>OSM2XP</name>
+	<name>OSM2XP - Console version</name>
 	<organization>
 		<name>OnPositive</name>
 	</organization>
@@ -21,6 +21,11 @@
 	<modules>		
 		<module>../com.osm2xp.console</module>
 	</modules>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 
 	<build>
