--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -4,6 +4,4 @@ source.. = src/main/java/,\
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               lib/chronicle-map.jar,\
-               lib/chronicle-core.jar,\
-               lib/chronicle-wire.jar
+               staticlib/
