--- a/com.osm2xp.product/pom.xml
+++ b/com.osm2xp.product/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.osm2xp</groupId>
 		<artifactId>com.osm2xp.parent</artifactId>
-		<version>4.0.0-SNAPSHOT</version>
+		<version>4.0.0</version>
 		<relativePath>../releng-app/pom.xml</relativePath>
 	</parent>
 
@@ -27,6 +27,83 @@
 						<goals>
 							<goal>materialize-products</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>copy-resources-win</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>./target/products/${project.artifactId}/win32/win32/x86_64/xplane</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../osm2xp_additions/xplane</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-resources-lin</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>./target/products/${project.artifactId}/linux/gtk/x86_64/xplane</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../osm2xp_additions/xplane</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-tools-win</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>./target/products/${project.artifactId}/win32/win32/x86_64/xplane/utils</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../osm2xp_additions/utils</directory>
+									<filtering>false</filtering>
+									<includes>
+						                <include>**/*.exe</include>
+						            </includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-tools-lin</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>./target/products/${project.artifactId}/linux/gtk/x86_64/xplane/utils</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../osm2xp_additions/utils</directory>
+									<filtering>false</filtering>
+									<excludes>
+										<exclude>**/*.exe</exclude>
+									</excludes>
+								</resource>
+							</resources>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
