--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="staticlib/animal-sniffer-annotations-1.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/annotations-13.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/checker-qual-2.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/eclipse-collections-10.0.0.M2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/eclipse-collections-api-10.0.0.M2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/eclipse-collections-forkjoin-10.0.0.M2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/elsa-3.0.0-M5.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/error_prone_annotations-2.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/failureaccess-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/j2objc-annotations-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/jsr305-3.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/kotlin-stdlib-1.2.71.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/kotlin-stdlib-common-1.2.71.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/lz4-1.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/mapdb-3.0.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -11,7 +27,7 @@
 	<classpathentry kind="src" path="src/test/java/"/>
 	<classpathentry kind="src" path="src/main/resources/"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/commons-io-2.6-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1553686141917/source/geonames-ws-client-1.1.9-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1553072565977/source/jts-core-1.16.0-sources-1553073315931.jar"/>
