--- a/releng-app/pom.xml
+++ b/releng-app/pom.xml
@@ -11,7 +11,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.osm2xp</groupId>
 	<artifactId>com.osm2xp.parent</artifactId>
-	<version>4.0.0-SNAPSHOT</version>
+	<version>4.0.0</version>
 	<packaging>pom</packaging>
 	<name>OSM2XP</name>
 	<organization>
@@ -47,6 +47,7 @@
 		<build.file.win32.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.zip</build.file.win32.fullpath>
 		<build.file.linux.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.tar.gz</build.file.linux.fullpath>
 		<build.folder.type>test</build.folder.type>
+		<build.file>osm2xp-${project.version}</build.file>
 		<build.file.zip>osm2xp.zip</build.file.zip>
 		<build.deploy.release>false</build.deploy.release>
 		<!-- <target.platform.name.default>mavenTychoDemo</target.platform.name.default>  -->
@@ -90,7 +91,7 @@
 				<target.platform.name>${target.platform.name.default}</target.platform.name>
 				<build.folder.type>integration/${build.version}</build.folder.type>
 				<build.qualifier>'i'yyyyMMddHHmm</build.qualifier>
-				<build.file>MavenTychoDemo_Integration_${build.version}</build.file>
+				<build.file>OSM2XP_Integration_${build.version}</build.file>
 			</properties>
 		</profile>
 		<profile>
