Product build fix
Change-Id: Ie37417c758d2907021167553bbe342c2b3471789

--- a/com.osm2xp.application/build.properties
+++ b/com.osm2xp.application/build.properties
@@ -2,7 +2,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               splash.bmp,\
                plugin_customization.ini,\
                toc.xml,\
                tocGettingStarted.xml,\
@@ -12,6 +11,6 @@ bin.includes = plugin.xml,\
                tocTutorials.xml,\
                images/,\
                icons/,\
-               lib/
+               lib/,\
+               splash.bmp
 source.. = src/
-bin.excludes = images/translatorsImages/
