--- a/com.osm2xp.application/.classpath
+++ b/com.osm2xp.application/.classpath
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-configuration-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/geonames-1.1.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-api-19.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-main-19.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-opengis-19.2.jar"/>
@@ -12,18 +17,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.3.160.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdbm-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/JDBM-3.0-alpha3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/OSM2World.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/persistence-api-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/Tuple.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
