--- a/com.osm2xp.core/build.properties
+++ b/com.osm2xp.core/build.properties
@@ -2,4 +2,6 @@ source.. = src/main/java/,\
            src/test/java/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/,\
+               lib/jaxb-core.jar,\
+               lib/jaxb-impl.jar
