--- a/com.osm2xp.core/pom.xml
+++ b/com.osm2xp.core/pom.xml
@@ -139,6 +139,17 @@
 									<artifactId>openmap</artifactId>
 									<version>5.0.3</version>
 								</dependency>
+								<dependency>
+								    <groupId>com.sun.xml.bind</groupId>
+								    <artifactId>jaxb-impl</artifactId>
+								    <version>2.2.11</version>
+								</dependency>
+								
+								<dependency>
+								    <groupId>com.sun.xml.bind</groupId>
+								    <artifactId>jaxb-core</artifactId>
+								    <version>2.2.11</version>
+								</dependency>
 								<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
 								<dependency>
 									<groupId>javax.xml.bind</groupId>
@@ -153,11 +164,11 @@
 								</dependency>
 
 								<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
-								<dependency>
-									<groupId>org.glassfish.jaxb</groupId>
-									<artifactId>jaxb-runtime</artifactId>
-									<version>2.3.0-b170127.1453</version>
-								</dependency>
+<!-- 								<dependency> -->
+<!-- 									<groupId>org.glassfish.jaxb</groupId> -->
+<!-- 									<artifactId>jaxb-runtime</artifactId> -->
+<!-- 									<version>2.3.0-b170127.1453</version> -->
+<!-- 								</dependency> -->
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
