--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -4,4 +4,5 @@ source.. = src/main/java/,\
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               staticlib/
+               staticlib/,\
+               lib/jdom.jar
