--- a/com.osm2xp.generation/pom.xml
+++ b/com.osm2xp.generation/pom.xml
@@ -76,7 +76,12 @@
 								    <groupId>net.sf.trove4j</groupId>
 								    <artifactId>trove4j</artifactId>
 								    <version>3.0.3</version>
-								</dependency>								
+								</dependency>						
+								<dependency>
+								    <groupId>org.jdom</groupId>
+								    <artifactId>jdom</artifactId>
+								    <version>1.1.3</version>
+								</dependency>																		
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
