Build fixes, poly generation fixes
Change-Id: I4e57a9291f55263966410f82e6b8a62c7b36135c

--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -216,9 +216,9 @@
 			<version>2.4.1</version>
 		</dependency>								
 		<dependency>
-			<groupId>com.bbn.openmap</groupId>
-			<artifactId>openmap</artifactId>
-			<version>5.0.3</version>
+		    <groupId>com.bbn</groupId>
+		    <artifactId>openmap</artifactId>
+		    <version>5.1.15</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
 		<dependency>
