--- a/com.osm2xp.core/pom.xml
+++ b/com.osm2xp.core/pom.xml
@@ -135,9 +135,9 @@
 									<version>2.6</version>
 								</dependency>
 								<dependency>
-									<groupId>com.bbn.openmap</groupId>
-									<artifactId>openmap</artifactId>
-									<version>5.0.3</version>
+								    <groupId>com.bbn</groupId>
+								    <artifactId>openmap</artifactId>
+								    <version>5.1.15</version>
 								</dependency>
 								<dependency>
 								    <groupId>com.sun.xml.bind</groupId>
