--- a/releng-app/pom.xml
+++ b/releng-app/pom.xml
@@ -9,7 +9,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.osm2xp</groupId>
 	<artifactId>com.osm2xp.parent</artifactId>
 	<version>4.0.0</version>
 	<packaging>pom</packaging>
@@ -17,6 +16,13 @@
 	<organization>
 		<name>OnPositive</name>
 	</organization>
+	
+	<parent>
+		<groupId>com.osm2xp</groupId>
+  		<artifactId>com.osm2xp.build</artifactId>
+  		<version>4.0.0-SNAPSHOT</version>
+		<relativePath>../releng</relativePath>
+	</parent>
 
 	<repositories>
 		<repository>
