--- a/releng-console/pom.xml
+++ b/releng-console/pom.xml
@@ -9,14 +9,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.osm2xp</groupId>
 	<artifactId>com.osm2xp.console.parent</artifactId>
-	<version>4.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>OSM2XP - Console version</name>
 	<organization>
 		<name>OnPositive</name>
 	</organization>
+
+	<parent>
+		<groupId>com.osm2xp</groupId>
+  		<artifactId>com.osm2xp.build</artifactId>
+  		<version>4.0.0-SNAPSHOT</version>
+		<relativePath>../releng</relativePath>
+	</parent>
 
 	<modules>		
 		<module>../com.osm2xp.console</module>
