--- a/releng-core/pom.xml
+++ b/releng-core/pom.xml
@@ -17,7 +17,14 @@
 	<organization>
 		<name>OnPositive</name>
 	</organization>
-
+	
+	<parent>
+		<groupId>com.osm2xp</groupId>
+  		<artifactId>com.osm2xp.build</artifactId>
+  		<version>4.0.0-SNAPSHOT</version>
+		<relativePath>../releng</relativePath>
+	</parent>
+	
 	<modules>
 		<module>../com.osm2xp.core</module>
 		<module>../com.osm2xp.generation</module>
