--- a/com.osm2xp.application/.classpath
+++ b/com.osm2xp.application/.classpath
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="staticlib/commons-collections-3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/commons-compress-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/commons-configuration-1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/gt-api-19.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/gt-main-19.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/gt-opengis-19.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/gt-referencing-19.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/h2-1.3.160.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/jdbm-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/JDBM-3.0-alpha3.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/jfreechart-1.0.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/OSM2World.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/persistence-api-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="staticlib/Tuple.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
