Object by id, UI and build fixes
Change-Id: Icc813a02d193091e7150473895ff7d2d47d01395

--- a/com.osm2xp.classification.core/pom.xml
+++ b/com.osm2xp.classification.core/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>com.osm2xp.classification.core</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
-	<name>core</name>
+	<name>classification.core</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
