--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -270,6 +270,11 @@
 		    <groupId>net.sf.trove4j</groupId>
 		    <artifactId>trove4j</artifactId>
 		    <version>3.0.3</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>com.osm2xp</groupId>
+			<artifactId>com.osm2xp.classification.core</artifactId>
+			<version>4.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
